--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "imagemin": "^9.0.0",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
+    "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1"
   },
