--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
-    
   },
   "dependencies": {
+    "@cloudpdf/viewer": "^1.0.5",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "imagemin": "^9.0.0",
